# lwindesk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
compositor/: CMakeLists.txt
compositor/include/: input.h  ipc.h  output.h  server.h  snap.h  view.h  workspace.h
compositor/src/: input.c  ipc.c  layer_shell.c  main.c  output.c  server.c  snap.c  view.c  workspace.c  xdg_shell.c
packaging/debian/: changelog  control  copyright  install  rules
session/: lwindesk-session  lwindesk.desktop
shell/: CMakeLists.txt
shell/qml/: Main.qml
shell/qml/common/: LWButton.qml  LWPanel.qml
shell/qml/desktop/: ContextMenuItem.qml  ContextMenuSeparator.qml  DesktopContextMenu.qml
shell/qml/lockscreen/: LockScreen.qml
shell/qml/notifications/: NotificationCenter.qml  NotificationPopup.qml
shell/qml/quicksettings/: QuickSettings.qml
shell/qml/search/: SearchOverlay.qml
shell/qml/snapoverlay/: SnapOverlay.qml
shell/qml/startmenu/: AppGrid.qml  SearchBar.qml  StartMenu.qml
shell/qml/systray/: SysTray.qml
shell/qml/taskbar/: ClockWidget.qml  SystemTray.qml  Taskbar.qml  TaskbarButton.qml
shell/qml/virtualdesktops/: DesktopSwitcher.qml
shell/qml/widgets/: WidgetPanel.qml
shell/src/: iconprovider.cpp  iconprovider.h  main.cpp  notificationmanager.cpp  notificationmanager.h  shellmanager.cpp  shellmanager.h  startmenumodel.cpp  startmenumodel.h  systemtraymanager.cpp  systemtraymanager.h  taskbarmodel.cpp  taskbarmodel.h
